--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
     "lenis": "^1.0.37",
-    "lucide-react": "^0.471.0",
+    "lucide-react": "^0.471.2",
+    "motion": "^12.23.12",
     "next": "14.2.5",
+    "nodemailer": "^6.9.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "^3.23.8",
-    "nodemailer": "^6.9.14"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
