--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.34.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
     "framer-motion": "^11.3.24",
     "lenis": "^1.0.37",
     "lucide-react": "^0.471.2",
