--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,16 @@
 {
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "extends": ["next/core-web-vitals", "eslint:recommended"],
   "rules": {
     "react/no-unescaped-entities": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["tailwind.config.ts"],
+      "rules": {
+        "no-mixed-spaces-and-tabs": "off"
+      }
+    }
+  ]
 }
