--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ SMTP_FROM="AZ Media <no-reply@az-media.ca>"
 # Optional: Resend or other providers could also be used instead.
 # RESEND_API_KEY=
 # RESEND_FROM=AZ Media <no-reply@az-media.ca>
+
+# Estimator discount (set to "true" to enable 50% off opening offer)
+NEXT_PUBLIC_ENABLE_DISCOUNT=true
